--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,4 +19,5 @@ jobs:
         run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         uses: psf/black@stable
-        options: "--check --verbose"
+        with:
+          options: "--check --verbose"
